helmets with ovals and letters on 5 nav items top managers

--- a/markup/_dist/homepage.html
+++ b/markup/_dist/homepage.html
@@ -542,7 +542,10 @@
                             <li class="nav-item"><a data-target="#carouselTop5Managers" href="" data-slide-to="0" class="active">
                                 <div class="menu-item top-5">
                                   <div class="players"> 
-                                    <div id="top5-managers-nav" style="display: block;"><img id="helmet" src="assets/img/helmet/white-helmet.png" style="display: block;" class="helmet-img"><img id="oval" src="assets/img/oval/grayoval.png" style="display: block;" class="img-fluid select-oval"><img id="letter" src="assets/img/letter/n.png" style="display: block;" class="img-fluid select-letter">
+                                    <div id="top5-managers-nav" style="display: block;">
+                                      <div class="helmet-container"><img id="helmet" src="assets/img/helmet/white-helmet.png" style="display: block;" class="helmet-img">
+                                        <div class="oval-letter"><img id="oval" src="assets/img/oval/grayoval.png" style="display: block;" class="img-fluid select-oval"><img id="letter" src="assets/img/letter/n.png" style="display: block;" class="img-fluid select-letter"></div>
+                                      </div>
                                     </div>
                                     <div class="number">
                                       <p>1</p>
@@ -603,7 +606,11 @@
                             <li class="nav-item"><a data-target="#carouselTop5Managers" href="" data-slide-to="4">
                                 <div class="menu-item top-5">
                                   <div class="players"> 
-                                    <div id="top5-managers-nav" style="display: block;"><img id="top-manager-nav" src="assets/img/white-helmet.png" style="display: block;"></div>
+                                    <div id="top5-managers-nav" style="display: block;">
+                                      <div class="helmet-container"><img id="helmet" src="assets/img/helmet/white-helmet.png" style="display: block;" class="helmet-img">
+                                        <div class="oval-letter"><img id="oval" src="assets/img/oval/grayoval.png" style="display: block;" class="img-fluid select-oval"><img id="letter" src="assets/img/letter/n.png" style="display: block;" class="img-fluid select-letter"></div>
+                                      </div>
+                                    </div>
                                     <div class="number">
                                       <p>5</p>
                                     </div>
@@ -620,7 +627,7 @@
                             <div class="carousel-item active">
                               <div class="tab-content">
                                 <div id="manager1" role="tabpanel" class="tab-pane active">
-                                  <div class="row player">
+                                  <div class="row">
                                     <div class="col-12 col-xs-5 hidden-md-down col-lg-5 no-padding">
                                       <div id="top5-managers-picture" style="display: block;">
                                         <div class="helmet-container"><img id="helmet" src="assets/img/helmet/white-helmet.png" style="display: block;" class="helmet-img">
