FP points beneath helmets

--- a/markup/_dist/homepage.html
+++ b/markup/_dist/homepage.html
@@ -552,6 +552,7 @@
                                     </div>
                                     <div class="manager-thumbnail-name">
                                       <p>Rafael</p>
+                                      <p class="orange">185 FP</p>
                                     </div>
                                     <div class="points-in-bar">
                                       <p class="points">121 PTS</p>
@@ -567,6 +568,7 @@
                                     </div>
                                     <div class="manager-thumbnail-name">
                                       <p>Oscar</p>
+                                      <p class="orange">185 FP</p>
                                     </div>
                                     <div class="points-in-bar">
                                       <p class="points">121 PTS</p>
@@ -582,6 +584,7 @@
                                     </div>
                                     <div class="manager-thumbnail-name">
                                       <p>Dan</p>
+                                      <p class="orange">185 FP</p>
                                     </div>
                                     <div class="points-in-bar">
                                       <p class="points">121 PTS</p>
@@ -597,6 +600,7 @@
                                     </div>
                                     <div class="manager-thumbnail-name">
                                       <p>Nicholas</p>
+                                      <p class="orange">185 FP</p>
                                     </div>
                                     <div class="points-in-bar">
                                       <p class="points">121 PTS</p>
@@ -616,6 +620,7 @@
                                     </div>
                                     <div class="manager-thumbnail-name">
                                       <p>Anthony</p>
+                                      <p class="orange">185 FP</p>
                                     </div>
                                     <div class="points-in-bar">
                                       <p class="points">121 PTS</p>
@@ -655,11 +660,6 @@
                                                   </div>
                                                   <div class="col-12 no-padding">
                                                     <h3>The best NLC2 team!!</h3>
-                                                  </div>
-                                                </div>
-                                                <div class="row"> 
-                                                  <div class="col-10">
-                                                    <div id="create-helmet" style="display: block;" class="final-helmet"><img id="helmet" src="assets/img/helmet/white-helmet.png" style="display: block;" class="helmet-img"><img id="oval" src="assets/img/oval/whiteoval.png" style="display: block;" class="img-fluid select-oval"><img id="letter" src="assets/img/letter/n.png" style="display: block;" class="img-fluid select-letter"></div>
                                                   </div>
                                                 </div>
                                               </div>
@@ -746,6 +746,7 @@
                                         </div>
                                         <div class="name">
                                           <p>Rafael</p>
+                                          <p class="orange">123 FP</p>
                                         </div>
                                       </div>
                                     </div>
