make top 5 players more responsive

--- a/markup/_dist/homepage.html
+++ b/markup/_dist/homepage.html
@@ -107,7 +107,7 @@
             <div class="sports-icon col-12 col-lg-6"><img src="assets/img/football.png" alt="" class="sports"><img src="assets/img/basketball.png" alt="" class="sports"><img src="assets/img/americanfootball.png" alt="" class="sports"><img src="assets/img/baseball.png" alt="" class="sports"><img src="assets/img/cricket.png" alt="" class="sports"><img src="assets/img/hockey.png" alt="" class="sports"><img src="assets/img/mma.png" alt="" class="sports"></div>
           </div>
           <div class="row top-5-section">
-            <div class="col-12 col-lg-6 col-xl-6 position">
+            <div class="col-12 col-lg-6 col-xl-6 top5-player-container">
               <h5 class="text-center visible-xxs subtitle position">TOP 5<span>Tight ends</span></h5>
               <h5 class="hidden-xxs subtitle">TOP 5<span class="position-subtitle"> 
                   <div class="dropdown player-position">
@@ -205,9 +205,7 @@
                                     </div>
                                     <div class="player-thumbnail-name">
                                       <p>grownkowski</p>
-                                    </div>
-                                    <div class="points-in-bar">
-                                      <p class="points">121 PTS</p>
+                                      <p class="orange">111 PTS</p>
                                     </div>
                                   </div>
                                 </div></a></li>
@@ -220,9 +218,7 @@
                                     </div>
                                     <div class="player-thumbnail-name">
                                       <p>beckham JR</p>
-                                    </div>
-                                    <div class="points-in-bar">
-                                      <p class="points">121 PTS</p>
+                                      <p class="orange">118 PTS</p>
                                     </div>
                                   </div>
                                 </div></a></li>
@@ -235,9 +231,7 @@
                                     </div>
                                     <div class="player-thumbnail-name">
                                       <p>Ryan</p>
-                                    </div>
-                                    <div class="points-in-bar">
-                                      <p class="points">121 PTS</p>
+                                      <p class="orange">121 PTS</p>
                                     </div>
                                   </div>
                                 </div></a></li>
@@ -250,9 +244,7 @@
                                     </div>
                                     <div class="player-thumbnail-name">
                                       <p>Rodgers</p>
-                                    </div>
-                                    <div class="points-in-bar">
-                                      <p class="points">121 PTS</p>
+                                      <p class="orange">121 PTS</p>
                                     </div>
                                   </div>
                                 </div></a></li>
@@ -265,9 +257,7 @@
                                     </div>
                                     <div class="player-thumbnail-name">
                                       <p>Johnson</p>
-                                    </div>
-                                    <div class="points-in-bar">
-                                      <p class="points">121 PTS</p>
+                                      <p class="orange">121 PTS</p>
                                     </div>
                                   </div>
                                 </div></a></li>
@@ -397,7 +387,7 @@
                                     </table>
                                   </div>
                                 </div>
-                                <div class="new-news-player">
+                                <div class="new-news-player hidden-xs-down">
                                   <h5>Todd Gurley Bounces Back In Victory Over Jags</h5>
                                   <p>Los Angeles Chargers quarterback Philip Rivers had a solid week against the weak Oakland secondary.</p>
                                   <p><a href="#">more...</a></p>
@@ -746,7 +736,6 @@
                                         </div>
                                         <div class="name">
                                           <p>Rafael</p>
-                                          <p class="orange">123 FP</p>
                                         </div>
                                       </div>
                                     </div>
