all helmets replaced on homepage

--- a/markup/_dist/homepage.html
+++ b/markup/_dist/homepage.html
@@ -851,7 +851,11 @@
                           </div>
                         </div>
                         <div data-position="DEF" class="nl-player-block nl-DEF-position">
-                          <div id="create-helmet" style="display: block;" class="final-helmet"><img id="helmet" src="assets/img/helmet/red-helmet.png" style="display: block;" class="helmet-img"><img id="oval" src="assets/img/oval/whiteoval.png" style="display: block;" class="img-fluid select-oval"><img id="letter" src="assets/img/letter/n.png" style="display: block;" class="img-fluid select-letter"></div>
+                          <div id="create-helmet" style="display: block;" class="final-helmet">
+                            <div class="helmet-container"><img id="helmet" src="assets/img/helmet/white-helmet.png" style="display: block;" class="helmet-img">
+                              <div class="oval-letter"><img id="oval" src="assets/img/oval/grayoval.png" style="display: block;" class="img-fluid select-oval vis-hidden"><img id="letter" src="assets/img/letter/n.png" style="display: block;" class="img-fluid select-letter vis-hidden"></div>
+                            </div>
+                          </div>
                           <div class="nl-player-block--data">
                             <p>PATRIOTS</p>
                             <p class="data orange"><span>12.67</span> <span>$42000</span>			</p>
@@ -868,7 +872,9 @@
                             <div class="col-12 no-padding">
                               <div class="nl-team-card table-data-field">
                                 <h3>team NLC2</h3>
-                                <div id="create-helmet" style="display: block;" class="final-helmet"><img id="helmet" src="assets/img/helmet/red-helmet.png" style="display: block;" class="helmet-img"><img id="oval" src="assets/img/oval/whiteoval.png" style="display: block;" class="img-fluid select-oval"><img id="letter" src="assets/img/letter/n.png" style="display: block;" class="img-fluid select-letter"></div>
+                                <div id="create-helmet" style="display: block;" class="final-helmet">
+                                  <div class="helmet-container"><img id="helmet" src="assets/img/helmet/white-helmet.png" style="display: block;" class="helmet-img"></div>
+                                </div>
                               </div>
                             </div>
                           </div>
