--- a/markup/_dist/homepage_soccer.html
+++ b/markup/_dist/homepage_soccer.html
@@ -199,9 +199,7 @@
                                     </div>
                                     <div class="player-thumbnail-name">
                                       <p>Ronaldo</p>
-                                    </div>
-                                    <div class="points-in-bar">
-                                      <p class="points">121 PTS</p>
+                                      <p class="orange">121 PTS</p>
                                     </div>
                                   </div>
                                 </div></a></li>
@@ -214,9 +212,7 @@
                                     </div>
                                     <div class="player-thumbnail-name">
                                       <p>Messi</p>
-                                    </div>
-                                    <div class="points-in-bar">
-                                      <p class="points">121 PTS</p>
+                                      <p class="orange">121 PTS</p>
                                     </div>
                                   </div>
                                 </div></a></li>
@@ -229,9 +225,7 @@
                                     </div>
                                     <div class="player-thumbnail-name">
                                       <p>Ramos</p>
-                                    </div>
-                                    <div class="points-in-bar">
-                                      <p class="points">121 PTS</p>
+                                      <p class="orange">121 PTS</p>
                                     </div>
                                   </div>
                                 </div></a></li>
@@ -244,9 +238,7 @@
                                     </div>
                                     <div class="player-thumbnail-name">
                                       <p>Henry</p>
-                                    </div>
-                                    <div class="points-in-bar">
-                                      <p class="points">121 PTS</p>
+                                      <p class="orange">121 PTS</p>
                                     </div>
                                   </div>
                                 </div></a></li>
@@ -259,9 +251,7 @@
                                     </div>
                                     <div class="player-thumbnail-name">
                                       <p>Robben</p>
-                                    </div>
-                                    <div class="points-in-bar">
-                                      <p class="points">121 PTS</p>
+                                      <p class="orange">121 PTS</p>
                                     </div>
                                   </div>
                                 </div></a></li>
@@ -279,7 +269,6 @@
                                         <div class="name">
                                           <p>Cristiano Ronaldo</p>
                                         </div>
-                                        <p class="points">121 PTS </p>
                                       </div>
                                     </div>
                                     <div class="player-info">
@@ -307,7 +296,6 @@
                                         <div class="name">
                                           <p>Lionel Messi</p>
                                         </div>
-                                        <p class="points">121 PTS </p>
                                       </div>
                                     </div>
                                     <div class="player-info">
@@ -335,7 +323,6 @@
                                         <div class="name">
                                           <p>Sergio Ramos</p>
                                         </div>
-                                        <p class="points">121 PTS </p>
                                       </div>
                                     </div>
                                     <div class="player-info">
@@ -363,7 +350,6 @@
                                         <div class="name">
                                           <p>Thierry Henry</p>
                                         </div>
-                                        <p class="points">121 PTS </p>
                                       </div>
                                     </div>
                                     <div class="player-info">
@@ -391,7 +377,6 @@
                                         <div class="name">
                                           <p>Arjen Robben</p>
                                         </div>
-                                        <p class="points">121 PTS </p>
                                       </div>
                                     </div>
                                     <div class="player-info">
@@ -535,9 +520,7 @@
                                     </div>
                                     <div class="manager-thumbnail-name">
                                       <p>Rafael</p>
-                                    </div>
-                                    <div class="points-in-bar">
-                                      <p class="points">121 PTS</p>
+                                      <p class="orange">121 PTS</p>
                                     </div>
                                   </div>
                                 </div></a></li>
@@ -550,9 +533,7 @@
                                     </div>
                                     <div class="manager-thumbnail-name">
                                       <p>Oscar</p>
-                                    </div>
-                                    <div class="points-in-bar">
-                                      <p class="points">121 PTS</p>
+                                      <p class="orange">121 PTS</p>
                                     </div>
                                   </div>
                                 </div></a></li>
@@ -565,9 +546,7 @@
                                     </div>
                                     <div class="manager-thumbnail-name">
                                       <p>Dan</p>
-                                    </div>
-                                    <div class="points-in-bar">
-                                      <p class="points">121 PTS</p>
+                                      <p class="orange">121 PTS</p>
                                     </div>
                                   </div>
                                 </div></a></li>
@@ -580,9 +559,7 @@
                                     </div>
                                     <div class="manager-thumbnail-name">
                                       <p>Nicholas</p>
-                                    </div>
-                                    <div class="points-in-bar">
-                                      <p class="points">121 PTS</p>
+                                      <p class="orange">121 PTS</p>
                                     </div>
                                   </div>
                                 </div></a></li>
@@ -595,9 +572,7 @@
                                     </div>
                                     <div class="manager-thumbnail-name">
                                       <p>Anthony</p>
-                                    </div>
-                                    <div class="points-in-bar">
-                                      <p class="points">121 PTS</p>
+                                      <p class="orange">121 PTS</p>
                                     </div>
                                   </div>
                                 </div></a></li>
@@ -615,9 +590,6 @@
                                           </div>
                                           <div class="name">
                                             <p>Rafael</p>
-                                          </div>
-                                          <div class="points-in-bar">
-                                            <p class="points">121 PTS</p>
                                           </div>
                                         </div>
                                       </div>
@@ -749,16 +721,13 @@
                                 <div id="manager1" role="tabpanel" class="tab-pane active">
                                   <div class="row player">
                                     <div class="col-12 col-xs-5 hidden-md-down col-lg-5 no-padding">
-                                      <div id="top5-managers-picture" style="display: block;"><img id="top-manager" src="assets/img/about/person11.png" style="display: block;" class="img-fluid">
+                                      <div id="top5-managers-picture" style="display: block;"><img id="top-manager" src="assets/img/about/person1.png" style="display: block;" class="img-fluid">
                                         <div class="manager-image-inner">
                                           <div class="number">
-                                            <p>2</p>
+                                            <p>1</p>
                                           </div>
                                           <div class="name">
-                                            <p>Oscar</p>
-                                          </div>
-                                          <div class="points-in-bar">
-                                            <p class="points">121 PTS</p>
+                                            <p>Rafael</p>
                                           </div>
                                         </div>
                                       </div>
@@ -874,10 +843,10 @@
                                     <div class="col-12 hidden-lg-up col-sm-6 offset-sm-3 hidden-title-bar">
                                       <div class="manager-image-inner">
                                         <div class="number">
-                                          <p>2</p>
+                                          <p>1</p>
                                         </div>
                                         <div class="name">
-                                          <p>Oscar</p>
+                                          <p>Rafael</p>
                                         </div>
                                       </div>
                                     </div>
@@ -890,16 +859,13 @@
                                 <div id="manager1" role="tabpanel" class="tab-pane active">
                                   <div class="row player">
                                     <div class="col-12 col-xs-5 hidden-md-down col-lg-5 no-padding">
-                                      <div id="top5-managers-picture" style="display: block;"><img id="top-manager" src="assets/img/about/person10.png" style="display: block;" class="img-fluid">
+                                      <div id="top5-managers-picture" style="display: block;"><img id="top-manager" src="assets/img/about/person1.png" style="display: block;" class="img-fluid">
                                         <div class="manager-image-inner">
                                           <div class="number">
-                                            <p>3</p>
+                                            <p>1</p>
                                           </div>
                                           <div class="name">
-                                            <p>Dan</p>
-                                          </div>
-                                          <div class="points-in-bar">
-                                            <p class="points">121 PTS</p>
+                                            <p>Rafael</p>
                                           </div>
                                         </div>
                                       </div>
@@ -1015,10 +981,10 @@
                                     <div class="col-12 hidden-lg-up col-sm-6 offset-sm-3 hidden-title-bar">
                                       <div class="manager-image-inner">
                                         <div class="number">
-                                          <p>3</p>
+                                          <p>1</p>
                                         </div>
                                         <div class="name">
-                                          <p>Dan</p>
+                                          <p>Rafael</p>
                                         </div>
                                       </div>
                                     </div>
@@ -1031,16 +997,13 @@
                                 <div id="manager1" role="tabpanel" class="tab-pane active">
                                   <div class="row player">
                                     <div class="col-12 col-xs-5 hidden-md-down col-lg-5 no-padding">
-                                      <div id="top5-managers-picture" style="display: block;"><img id="top-manager" src="assets/img/about/person4.png" style="display: block;" class="img-fluid">
+                                      <div id="top5-managers-picture" style="display: block;"><img id="top-manager" src="assets/img/about/person1.png" style="display: block;" class="img-fluid">
                                         <div class="manager-image-inner">
                                           <div class="number">
-                                            <p>4</p>
+                                            <p>1</p>
                                           </div>
                                           <div class="name">
-                                            <p>Nicholas</p>
-                                          </div>
-                                          <div class="points-in-bar">
-                                            <p class="points">121 PTS</p>
+                                            <p>Rafael</p>
                                           </div>
                                         </div>
                                       </div>
@@ -1156,10 +1119,10 @@
                                     <div class="col-12 hidden-lg-up col-sm-6 offset-sm-3 hidden-title-bar">
                                       <div class="manager-image-inner">
                                         <div class="number">
-                                          <p>4</p>
+                                          <p>1</p>
                                         </div>
                                         <div class="name">
-                                          <p>Nicholas</p>
+                                          <p>Rafael</p>
                                         </div>
                                       </div>
                                     </div>
@@ -1172,16 +1135,13 @@
                                 <div id="manager1" role="tabpanel" class="tab-pane active">
                                   <div class="row player">
                                     <div class="col-12 col-xs-5 hidden-md-down col-lg-5 no-padding">
-                                      <div id="top5-managers-picture" style="display: block;"><img id="top-manager" src="assets/img/about/person5.png" style="display: block;" class="img-fluid">
+                                      <div id="top5-managers-picture" style="display: block;"><img id="top-manager" src="assets/img/about/person1.png" style="display: block;" class="img-fluid">
                                         <div class="manager-image-inner">
                                           <div class="number">
-                                            <p>5</p>
+                                            <p>1</p>
                                           </div>
                                           <div class="name">
-                                            <p>Anthony</p>
-                                          </div>
-                                          <div class="points-in-bar">
-                                            <p class="points">121 PTS</p>
+                                            <p>Rafael</p>
                                           </div>
                                         </div>
                                       </div>
@@ -1297,10 +1257,10 @@
                                     <div class="col-12 hidden-lg-up col-sm-6 offset-sm-3 hidden-title-bar">
                                       <div class="manager-image-inner">
                                         <div class="number">
-                                          <p>5</p>
+                                          <p>1</p>
                                         </div>
                                         <div class="name">
-                                          <p>Anthony</p>
+                                          <p>Rafael</p>
                                         </div>
                                       </div>
                                     </div>
