increased title size on homepage for clearer section difference, set soccer field correctly size wise for 992px and smaller

--- a/markup/_dist/homepage.html
+++ b/markup/_dist/homepage.html
@@ -108,11 +108,11 @@
           </div>
           <div class="row top-5-section">
             <div class="col-12 col-lg-6 col-xl-6 top5-player-container">
-              <h5 class="text-center visible-xxs subtitle position">TOP 5<span>Tight ends</span></h5>
-              <h5 class="hidden-xxs subtitle">TOP 5<span class="position-subtitle"> 
+              <h4 class="text-center visible-xxs subtitle position">TOP 5<span>Tight ends</span></h4>
+              <h4 class="hidden-xxs subtitle">TOP 5<span class="position-subtitle"> 
                   <div class="dropdown player-position">
                     <button type="button" data-toggle="dropdown" class="btn btn-primary">
-                      <h5>Running Back<i class="fa fa-caret-down"></i></h5>
+                      <h4>Running Back<i class="fa fa-caret-down"></i></h4>
                     </button>
                     <ul id="dropdown-in-player" role="menu" aria-labelledby="player-position" class="dropdown-menu">
                       <li role="presentation"><a role="menuitem" tabindex="-1" value="#RB">Running Back</a></li>
@@ -123,7 +123,7 @@
                       <li role="presentation"><a role="menuitem" tabindex="-1" value="#K">Kicker</a></li>
                       <li role="presentation"><a role="menuitem" tabindex="-1" value="#TE">Tight Ends</a></li>
                     </ul>
-                  </div></span></h5>
+                  </div></span></h4>
               <div id="playerModal" role="dialog" class="modal fade">
                 <div class="modal-dialog modal-sm">
                   <div class="modal-content">
@@ -1008,18 +1008,18 @@
               </script>
             </div>
             <div class="col-12 col-lg-6 col-xl-6 week">
-              <h5 class="text-center visible-xxs subtitle">TOP 5<span>Managers</span>in <span class="week">Week 3</span></h5>
-              <h5 class="hidden-xxs subtitle">TOP 5<span>Managers  </span>in<span> 
+              <h4 class="text-center visible-xxs subtitle">TOP 5<span>Managers</span>in <span class="week">Week 3</span></h4>
+              <h4 class="hidden-xxs subtitle">TOP 5<span>Managers  </span>in<span> 
                   <div class="dropdown week-position">
                     <button type="button" data-toggle="dropdown" class="btn btn-primary"> 
-                      <h5>Week 3<i class="fa fa-caret-down"></i></h5>
+                      <h4>Week 3<i class="fa fa-caret-down"></i></h4>
                     </button>
                     <ul id="dropdown-in-week" class="dropdown-menu">
                       <li role="presentation"><a role="menuitem" tabindex="-1" value="#week3">Week 3</a></li>
                       <li role="presentation"><a role="menuitem" tabindex="-1" value="#week4">Week 4</a></li>
                       <li role="presentation"><a role="menuitem" tabindex="-1" value="#week5">Week 5</a></li>
                     </ul>
-                  </div></span></h5>
+                  </div></span></h4>
               <div id="weekModal" role="dialog" class="modal fade">
                 <div class="modal-dialog modal-sm">
                   <div class="modal-content">
@@ -1839,7 +1839,7 @@
               <div class="nl-section nl-create-team homepage-field">
                 <div class="row">
                   <div class="col-12 no-padding-mobile text-center">
-                    <h5>MY TEAMS</h5>
+                    <h4>MY TEAMS</h4>
                   </div>
                   <div class="col-12 col-sm-8 offset-sm-2 col-md-8 offset-md-2 col-lg-6 offset-lg-3 col-xl-6 offset-xl-3 no-padding-mobile">
                     <form class="form-signin dropdown-my-teams">
@@ -2051,7 +2051,7 @@
             <div class="col-12 col-lg-6 offset-lg-1 offset-xl-1 col-xl-6">
               <div class="row align-items-center upcoming-contests">
                 <div class="col-md-12">
-                  <h5>contests</h5>
+                  <h4>contests</h4>
                 </div>
               </div>
               <div class="row">
@@ -2084,7 +2084,7 @@
                               <table class="table table-striped">
                                 <tbody>
                                   <tr>
-                                    <td>WK3 G Joe Theismann 5 team Challenge</td>
+                                    <td>Joe Theismann 5 team Challenge</td>
                                     <td>10</td>
                                     <td>71/100</td>
                                     <td>3</td>
@@ -2094,7 +2094,7 @@
                                     <td>STARTED</td>
                                   </tr>
                                   <tr>
-                                    <td>WK3 G Joe Theismann 5 team Challenge</td>
+                                    <td>Joe Theismann 5 team Challenge</td>
                                     <td>10</td>
                                     <td>71/100</td>
                                     <td>3</td>
@@ -2104,7 +2104,7 @@
                                     <td>STARTED</td>
                                   </tr>
                                   <tr>
-                                    <td>WK3 G Joe Theismann 5 team Challenge</td>
+                                    <td>Joe Theismann 5 team Challenge</td>
                                     <td>10</td>
                                     <td>71/100</td>
                                     <td>3</td>
@@ -2114,7 +2114,7 @@
                                     <td>STARTED</td>
                                   </tr>
                                   <tr>
-                                    <td>WK3 G Joe Theismann 5 team Challenge</td>
+                                    <td>Joe Theismann 5 team Challenge</td>
                                     <td>10</td>
                                     <td>71/100</td>
                                     <td>3</td>
@@ -2124,7 +2124,7 @@
                                     <td>STARTED</td>
                                   </tr>
                                   <tr>
-                                    <td>WK3 G Joe Theismann 5 team Challenge</td>
+                                    <td>Joe Theismann 5 team Challenge</td>
                                     <td>10</td>
                                     <td>71/100</td>
                                     <td>3</td>
@@ -2134,7 +2134,7 @@
                                     <td>STARTED</td>
                                   </tr>
                                   <tr>
-                                    <td>WK3 G Joe Theismann 5 team Challenge</td>
+                                    <td>Joe Theismann 5 team Challenge</td>
                                     <td>10</td>
                                     <td>71/100</td>
                                     <td>3</td>
@@ -2144,7 +2144,7 @@
                                     <td>STARTED</td>
                                   </tr>
                                   <tr>
-                                    <td>WK3 G Joe Theismann 5 team Challenge</td>
+                                    <td>Joe Theismann 5 team Challenge</td>
                                     <td>10</td>
                                     <td>71/100</td>
                                     <td>3</td>
@@ -2154,7 +2154,7 @@
                                     <td>STARTED</td>
                                   </tr>
                                   <tr>
-                                    <td>WK3 G Joe Theismann 5 team Challenge</td>
+                                    <td>Joe Theismann 5 team Challenge</td>
                                     <td>10</td>
                                     <td>71/100</td>
                                     <td>3</td>
@@ -2164,7 +2164,7 @@
                                     <td>STARTED</td>
                                   </tr>
                                   <tr>
-                                    <td>WK3 G Joe Theismann 5 team Challenge</td>
+                                    <td>Joe Theismann 5 team Challenge</td>
                                     <td>10</td>
                                     <td>71/100</td>
                                     <td>3</td>
@@ -2174,7 +2174,7 @@
                                     <td>STARTED</td>
                                   </tr>
                                   <tr>
-                                    <td>WK3 G Joe Theismann 5 team Challenge</td>
+                                    <td>Joe Theismann 5 team Challenge</td>
                                     <td>10</td>
                                     <td>71/100</td>
                                     <td>3</td>
@@ -2184,7 +2184,7 @@
                                     <td>STARTED</td>
                                   </tr>
                                   <tr>
-                                    <td>WK3 G Joe Theismann 5 team Challenge</td>
+                                    <td>Joe Theismann 5 team Challenge</td>
                                     <td>10</td>
                                     <td>71/100</td>
                                     <td>3</td>
@@ -2194,7 +2194,7 @@
                                     <td>STARTED</td>
                                   </tr>
                                   <tr>
-                                    <td>WK3 G Joe Theismann 5 team Challenge</td>
+                                    <td>Joe Theismann 5 team Challenge</td>
                                     <td>10</td>
                                     <td>71/100</td>
                                     <td>3</td>
@@ -2204,7 +2204,7 @@
                                     <td>STARTED</td>
                                   </tr>
                                   <tr>
-                                    <td>WK3 G Joe Theismann 5 team Challenge</td>
+                                    <td>Joe Theismann 5 team Challenge</td>
                                     <td>10</td>
                                     <td>71/100</td>
                                     <td>3</td>
@@ -2214,7 +2214,7 @@
                                     <td>STARTED</td>
                                   </tr>
                                   <tr>
-                                    <td>WK3 G Joe Theismann 5 team Challenge</td>
+                                    <td>Joe Theismann 5 team Challenge</td>
                                     <td>10</td>
                                     <td>71/100</td>
                                     <td>3</td>
@@ -2224,7 +2224,7 @@
                                     <td>STARTED</td>
                                   </tr>
                                   <tr>
-                                    <td>WK3 G Joe Theismann 5 team Challenge</td>
+                                    <td>Joe Theismann 5 team Challenge</td>
                                     <td>10</td>
                                     <td>71/100</td>
                                     <td>3</td>
@@ -2234,7 +2234,7 @@
                                     <td>STARTED</td>
                                   </tr>
                                   <tr>
-                                    <td>WK3 G Joe Theismann 5 team Challenge</td>
+                                    <td>Joe Theismann 5 team Challenge</td>
                                     <td>10</td>
                                     <td>71/100</td>
                                     <td>3</td>
@@ -2244,7 +2244,7 @@
                                     <td>STARTED</td>
                                   </tr>
                                   <tr>
-                                    <td>WK3 G Joe Theismann 5 team Challenge</td>
+                                    <td>Joe Theismann 5 team Challenge</td>
                                     <td>10</td>
                                     <td>71/100</td>
                                     <td>3</td>
@@ -2254,7 +2254,7 @@
                                     <td>STARTED</td>
                                   </tr>
                                   <tr>
-                                    <td>WK3 G Joe Theismann 5 team Challenge</td>
+                                    <td>Joe Theismann 5 team Challenge</td>
                                     <td>10</td>
                                     <td>71/100</td>
                                     <td>3</td>
@@ -2263,7 +2263,7 @@
                                     <td class="st-full">FULL</td>
                                   </tr>
                                   <tr>
-                                    <td>WK3 G Joe Theismann 5 team Challenge</td>
+                                    <td>Joe Theismann 5 team Challenge</td>
                                     <td>10</td>
                                     <td>71/100</td>
                                     <td>3</td>
@@ -2272,7 +2272,7 @@
                                     <td class="st-full">FULL</td>
                                   </tr>
                                   <tr>
-                                    <td>WK3 G Joe Theismann 5 team Challenge</td>
+                                    <td>Joe Theismann 5 team Challenge</td>
                                     <td>10</td>
                                     <td>71/100</td>
                                     <td>3</td>
@@ -2281,7 +2281,7 @@
                                     <td class="st-full">FULL</td>
                                   </tr>
                                   <tr>
-                                    <td>WK3 G Joe Theismann 5 team Challenge</td>
+                                    <td>Joe Theismann 5 team Challenge</td>
                                     <td>10</td>
                                     <td>71/100</td>
                                     <td>3</td>
@@ -2291,7 +2291,7 @@
                                     <td>STARTED</td>
                                   </tr>
                                   <tr>
-                                    <td>WK3 G Joe Theismann 5 team Challenge</td>
+                                    <td>Joe Theismann 5 team Challenge</td>
                                     <td>10</td>
                                     <td>71/100</td>
                                     <td>3</td>
@@ -2301,7 +2301,7 @@
                                     <td>STARTED</td>
                                   </tr>
                                   <tr>
-                                    <td>WK3 G Joe Theismann 5 team Challenge</td>
+                                    <td>Joe Theismann 5 team Challenge</td>
                                     <td>10</td>
                                     <td>71/100</td>
                                     <td>3</td>
@@ -2311,7 +2311,7 @@
                                     <td>STARTED</td>
                                   </tr>
                                   <tr>
-                                    <td>WK3 G Joe Theismann 5 team Challenge</td>
+                                    <td>Joe Theismann 5 team Challenge</td>
                                     <td>10</td>
                                     <td>71/100</td>
                                     <td>3</td>
